# shashki

./: .gitignore  README.md  TODO.md  count_boards.cc  debug.cc  draughts.h  dts.cc  judy_128_set.h  meson.build  test.cc  utils.h
include/: draughts.h  draughts_c.h  draughts_tables.h  draughts_types.h  mtdfs.h
src/: count_boards.cc  debug.cc  dfs.h  draughts.h  draughts_types.h  dts.cc  example.c  main.cc  meson.build  mtdfs.h  utils.h  wrapper.cc
test/: cases.h  draughts_2d.h  meson.build  tests.cc  tests_c.cc
